<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FlashCard</string>
    <string name="assetListGroup">vocabulary-lists</string>
    <string name="action_settings">Settings</string>
    <string name="action_add_new">Add New List</string>
    <string name="action_sync_to_drive">Sync to Google Drive</string>
    <string name="title_activity_settings">Settings</string>
    <string name="settings_category_title_quiz">Quiz Options</string>
    <string name="pref_quizAnswerDelay">Answer Delay</string>
    <string name="pref_quizAnswerDelay_default">750</string>
    <string name="settings_category_title_lists">List Options</string>
    <string name="pref_syncFilesToDrive">Sync to Drive</string>
    <string name="title_activity_main">FlashCard</string>
    <string name="main_header">FlashCard</string>
    <string name="button_start">Start</string>
    <string name="dialog_exit_app_message_text">Exit app?</string>
    <string name="dialog_exit_app_quit">Quit</string>
    <string name="dialog_exit_app_cancel">Cancel</string>
    <string name="title_activity_list_selection">Select List</string>
    <string name="list_selection_item_default">Vocabulary List</string>
    <string name="list_selection_item_edit_text">Edit</string>
    <string name="action_delete">Delete</string>
    <string name="dialog_delete_list_message">Delete list?</string>
    <string name="dialog_delete_list_confirm">OK</string>
    <string name="dialog_delete_list_cancel">Cancel</string>
    <string name="title_activity_load_list_data">List Details</string>
    <string name="list_data_title_default">ListTitle</string>
    <string name="list_data_wordcount_total_label">Total</string>
    <string name="list_data_wordcount_total_default">-100</string>
    <string name="list_data_wordcount_started_label">Started</string>
    <string name="list_data_wordcount_started_default">-0</string>
    <string name="list_data_wordcount_completed_label">Mastered</string>
    <string name="list_data_wordcount_completed_default">-0</string>
    <string name="list_data_sessionOptions_label"># Phrases</string>
    <string name="list_data_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent diam massa, adipiscing eu dui sed, facilisis mattis odio. Vestibulum et mollis sapien. Ut aliquet, justo in laoreet consectetur, neque leo scelerisque ante, quis convallis diam massa et sapien. Fusce risus mauris, condimentum in imperdiet id, rhoncus eu ligula. Aenean vulputate varius turpis a pulvinar. Curabitur consectetur sagittis eros nec fermentum. Mauris et molestie nisi, ut bibendum elit. Phasellus in pellentesque sapien. Nullam sed cursus leo, eget porttitor leo.</string>
    <string name="list_data_start_text">Start!</string>
    <string name="title_activity_quiz_session_controller">Quiz Start</string>
    <string name="quiz_questionDefault">Select the correct kana.</string>
    <string name="quiz_kanjiDefault">日本語</string>
    <string name="quiz_button">Choice</string>
    <string name="title_activity_quiz_kanji_kana">Quiz</string>
    <string name="title_activity_activity_quiz_session_results">Results</string>
    <string name="hello_world">Hello world!</string>
    <string name="sessionResults_label">Session Results</string>
    <string name="sessionResults_phrasesTotal_label">Phrases Studied</string>
    <string name="sessionResults_phrasesTotal_default">-10</string>
    <string name="sessionResults_listTitle_label">List</string>
    <string name="sessionResults_listTitle_default">TitleDefault</string>
    <string name="sessionResults_listItem_default">漢字</string>
    <string name="sessionResults_returnButton_text">End Session</string>
    <string name="quiz_session_end_dialog_text">End session?</string>
    <string name="quiz_session_end_dialog_save">Save &amp; Quit</string>
    <string name="quiz_session_end_dialog_quit">Quit without Saving</string>
    <string name="dialog_edit_phrase_text">Save changes?</string>
    <string name="dialog_edit_phrase_save_text">Save &amp; Quit</string>
    <string name="dialog_edit_phrase_quit_text">Quit without Saving</string>
    <string name="dialog_edit_phrase_cancel_text">Cancel</string>
    <string name="quiz_session_end_dialog_cancel">Cancel</string>
    <string name="title_activity_edit_list">Edit List</string>
    <string name="edit_list_cta_text">Save</string>
    <string name="editList_listPhrases_total_label">Total Phrases</string>
    <string name="editList_listPhrases_total_default">0</string>
    <string name="editList_listItem_default">漢字</string>
    <string name="title_activity_edit_phrase">Edit Phrase</string>
    <string name="edit_phrase_native_label">Native</string>
    <string name="edit_phrase_native_default">漢字</string>
    <string name="edit_phrase_phonetic_label">Phonetic</string>
    <string name="edit_phrase_phonetic_default">かな</string>
    <string name="edit_phrase_romanized_label">Romanized</string>
    <string name="edit_phrase_romanized_default">nihongo</string>
    <string name="edit_phrase_translated_label">Translated</string>
    <string name="edit_phrase_translated_default">english</string>
    <string name="edit_phrase_sentences_label">Example Sentences</string>
    <string name="edit_phrase_save_button_text">Save</string>
    <string name="edit_phrase_sentence_default">Sentence</string>
    <string name="edit_phrase_sentence_label_default">①</string>
    <string name="title_activity_edit_sentence">Edit Sentence</string>
    <string name="edit_sentence_native_label">Native</string>
    <string name="edit_sentence_native_default">文</string>
    <string name="edit_sentence_phonetic_label">Phonetic</string>
    <string name="edit_sentence_phonetic_default">文かな</string>
    <string name="edit_sentence_romanized_label">Romanized</string>
    <string name="edit_sentence_romanized_default">rei bun</string>
    <string name="edit_sentence_translated_label">Translated</string>
    <string name="edit_sentence_translated_default">This is an example sentence.</string>
    <string name="edit_sentence_sentences_label">Example Sentences</string>
    <string name="edit_sentence_save_button_text">Save</string>
    <string name="edit_sentence_sentence_default">Sentence</string>

</resources>
