<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Activity_LoadListData" >

    <TextView
        android:id="@+id/list_data_title"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/list_data_title_default"
        android:textSize="40sp"
        android:gravity="center" />

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="center" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                style="@style/ListDataLabel"
                android:id="@+id/list_data_wordcount_total_label"
                android:text="@string/list_data_wordcount_total_label" />

            <TextView
                style="@style/ListDataValue"
                android:id="@+id/list_data_wordcount_total_value"
                android:text="@string/list_data_wordcount_total_default" />
            
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                style="@style/ListDataLabel"
                android:id="@+id/list_data_wordcount_started_label"
                android:text="@string/list_data_wordcount_started_label" />

            <TextView
                style="@style/ListDataValue"
                android:id="@+id/list_data_wordcount_started_value"
                android:text="@string/list_data_wordcount_started_default" />
            
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                style="@style/ListDataLabel"
                android:id="@+id/list_data_wordcount_completed_label"
                android:text="@string/list_data_wordcount_completed_label" />

            <TextView
                style="@style/ListDataValue"
                android:id="@+id/list_data_wordcount_completed_value"
                android:text="@string/list_data_wordcount_completed_default" />
            
        </TableRow>
        
    </TableLayout>
    
    <Button
        android:id="@+id/list_data_start"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/list_data_start_text"
        android:textSize="40sp"
        android:onClick="startQuizSession" />

</LinearLayout>
