<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="10dp" >
    
    <TextView
        android:id="@+id/dialog_delete_list_message"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20sp"
        android:paddingBottom="10dp"
        android:text="@string/dialog_delete_list_message" />
    
    <Button
        android:id="@+id/dialog_confirm"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_delete_list_confirm"
        android:onClick="deleteList" />
    
    <Button
        android:id="@+id/dialog_cancel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_delete_list_cancel"
        android:onClick="cancelDialog" />

</LinearLayout>
